// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormSection /> UI Snapshot renders with label and labelFor 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 16px;
}

.emotion-0 {
  color: #5C5876;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-2 svg {
  display: none;
}

.emotion-4 {
  list-style-type: none;
  margin: 8px 0;
  min-height: 23px;
}

<div
  className="emotion-6 emotion-7"
>
  <label
    className="emotion-0 emotion-1"
    htmlFor="Test For"
  >
    Test Label
  </label>
  <div
    className="emotion-2 emotion-3"
  >
    <svg />
  </div>
  <ul
    className="emotion-4 emotion-5"
  />
</div>
`;

exports[`<FormSection /> UI Snapshot renders with label prop 1`] = `
.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 16px;
}

.emotion-0 {
  color: #5C5876;
  font-size: 0.75rem;
  line-height: 1.67;
}

.emotion-2 svg {
  display: none;
}

.emotion-4 {
  list-style-type: none;
  margin: 8px 0;
  min-height: 23px;
}

<div
  className="emotion-6 emotion-7"
>
  <label
    className="emotion-0 emotion-1"
    htmlFor="Test Label"
  >
    Test Label
  </label>
  <div
    className="emotion-2 emotion-3"
  >
    <svg />
  </div>
  <ul
    className="emotion-4 emotion-5"
  />
</div>
`;
